* fixed: modules.fleet, only select same color picked fleets by double click  * fixed: modules.toolbar.css move database search, next and previous up, so that those navigation elements not overlap with something else  - removed: build.xml

--- a/content/style/css/ingame.css
+++ b/content/style/css/ingame.css
@@ -232,11 +232,11 @@ div.menu-item > a:hover{
 .dbMozPluginUpperRight {
 	position: absolute;
 	right: 0px;
-	top: 0px;
+	top: -30px;
 }
 
 .dbMozPluginUpperLeft {
   position: absolute;
   left: 0px;
-  top: 0px;
+  top: -30px;
 }
